--- a/index.html
+++ b/index.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title> Welcome To My First HTML Page </title>
+<title>My First HTML Page </title>
 <meta charset="UT-8">
 </head>
 <body>
 <h3> Hi I'm Joel Siroy </h3>
 <p> This would be my first webiste</p>
+ <p><a linkID=01 href="index.html"> <h> Home</h> </a></p>
+ <p><a linkID=02 href="About.html"> <h> About</h> </a></p>
+ <p><a linkID=03 href="Projects.html"> <h> Projects</h> </a></p>
+ <p><a linkID=04 href="Blog.html"> <h> Blog</h> </a></p>
+ <p><a linkID=05 href="Contact.html"> <h> Contact</h> </a></p>
 </body>
 
 </html>
