--- a/Projects.html
+++ b/Projects.html
@@ -8,6 +8,7 @@
 <h3> Projects</h3>
 <p> My Projects is to be written here</p>
 <p><a linkID=01 href="index.html"> <h> Home</h> </a></p>
+<p><a linkID=06 href="TheFirstWorldWideWeb_recreation.html"> <h> Recreated The First World Wide Web</h> </a></p>
 </body>
 
 </html>
