--- a/Blog.html
+++ b/Blog.html
@@ -8,6 +8,10 @@
 <h3> Blog</h3>
 <p>My Blogs is to be written here</p>
 <p><a linkID=01 href="index.html"> <h> Home</h> </a></p>
+<p><a linkID=02 href="About.html"> <h> About</h> </a></p>
+<p><a linkID=03 href="Projects.html"> <h> Projects</h> </a></p>
+<p><a linkID=04 href="Blog.html"> <h> Blog</h> </a></p>
+<p><a linkID=05 href="Contact.html"> <h> Contact</h> </a></p>
 </body>
 
 </html>
