--- a/Projects.html
+++ b/Projects.html
@@ -8,6 +8,11 @@
 <h3> Projects</h3>
 <p> My Projects is to be written here</p>
 <p><a linkID=01 href="index.html"> <h> Home</h> </a></p>
+<p><a linkID=02 href="About.html"> <h> About</h> </a></p>
+<p><a linkID=03 href="Projects.html"> <h> Projects</h> </a></p>
+<p><a linkID=04 href="Blog.html"> <h> Blog</h> </a></p>
+<p><a linkID=05 href="Contact.html"> <h> Contact</h> </a></p>
+<p><h>1st Project</h></p>
 <p><a linkID=06 href="TheFirstWorldWideWeb_recreation.html"> <h> Recreated The First World Wide Web</h> </a></p>
 </body>
 
