--- a/Blog.html
+++ b/Blog.html
@@ -1,17 +1,56 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>  Blog </title>
-<meta charset="UT-8">
+    <head>
+        <title>My First HTML Page </title>
+        <h1> Blog</h1>
+        <meta charset="UT-8">
 </head>
 <body>
-<h3> Blog</h3>
-<p>My Blogs is to be written here</p>
-<p><a linkID=01 href="index.html"> <h> Home</h> </a></p>
-<p><a linkID=02 href="About.html"> <h> About</h> </a></p>
-<p><a linkID=03 href="Projects.html"> <h> Projects</h> </a></p>
-<p><a linkID=04 href="Blog.html"> <h> Blog</h> </a></p>
-<p><a linkID=05 href="Contact.html"> <h> Contact</h> </a></p>
-</body>
+    <nav>
+     <hr>
+       <a linkID=02 href="index.html">     <h>Home</h></a>     </a><span style='font-size:20px;'>&#8739;
+       <a linkID=02 href="About.html">     <h>About</h></a>    </a><span style='font-size:20px;'>&#8739;
+       <a linkID=03 href="Projects.html">  <h>Projects</h></a> </a><span style='font-size:20px;'>&#8739;
+       <a linkID=04 href="Blog.html">      <h>Blog</h> </a>    </a><span style='font-size:20px;'>&#8739;
+       <a linkID=05 href="Contact.html">   <h>Contact</h> </a>
+     <hr>
+    </nav>
+      <h3> Blog</h3>
+      <p>My Blogs is to be written here</p>
+      <h>Hobbies</h>
+      <ul>
+          <li>Billiard</li>
+          <li>Watching Movies</li>
+      </ul>
+      <ol>
+         <li>Billiard</li>
+         <li>Watching Movies</li>
+      </ol>
+      <dl>
+          <dt>Sports</dt>
+          <dd>-Basketball</dd>
+      </dl>
+          <hr>
+          <br>
+      <table>
+          <tr>  
+              <th>Day 1</th>
+              <th>Day 2</th>
+              <th>Day 3</th>
+          </tr>
+          <tr>
+              <td>A</td>
+              <td>B</td>
+              <td>C</td>
+          </tr>
+          <tr>
+             <td>1</td>
+             <td>2</td>
+             <td>3</td>
+          </tr>
+      </table>  
+      <hr> 
+     
+ </body>
 
 </html>
