--- a/Contact.html
+++ b/Contact.html
@@ -1,17 +1,26 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title> Contact </title>
-<meta charset="UT-8">
-</head>
-<body>
-<h3> Contact</h3>
-<p> My Contact is to be written here</p>
-<p><a linkID=01 href="index.html"> <h> Home</h> </a></p>
-<p><a linkID=02 href="About.html"> <h> About</h> </a></p>
-<p><a linkID=03 href="Projects.html"> <h> Projects</h> </a></p>
-<p><a linkID=04 href="Blog.html"> <h> Blog</h> </a></p>
-<p><a linkID=05 href="Contact.html"> <h> Contact</h> </a></p>
-</body>
+  <head>
+    <title>My First HTML Page </title>
+    <h1>Contact</h1>
+    <meta charset="UT-8">
+  </head>
+  <body>
+    <nav>
+     <hr>
+       <a linkID=02 href="index.html">     <h>Home</h></a>     </a><span style='font-size:20px;'>&#8739;
+       <a linkID=02 href="About.html">     <h>About</h></a>    </a><span style='font-size:20px;'>&#8739;
+       <a linkID=03 href="Projects.html">  <h>Projects</h></a> </a><span style='font-size:20px;'>&#8739;
+       <a linkID=04 href="Blog.html">      <h>Blog</h> </a>    </a><span style='font-size:20px;'>&#8739;
+       <a linkID=05 href="Contact.html">   <h>Contact</h> </a>
+     <hr>
+    </nav>
+  <body>
+       <h3> Contact</h3>
+       <p><cite> My Contact is to be written here</cite></p>
+       <h1>Home Address</h1>
+       <p><address><br>Beverly Homes 1 Phase 5,<br> Prenza 2, Marilao Bulacan </address></p>
+       <p><bdo dir="rtl">example BDO</bdo></p>
+ </body>
 
 </html>
