--- a/About.html
+++ b/About.html
@@ -1,17 +1,22 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title> About </title>
-<meta charset="UT-8">
-</head>
-<body>
-<h3>About</h3>
-<p> About this website is to be written here</p>
-<p><a linkID=01 href="index.html"> <h> Home</h> </a></p>
-<p><a linkID=02 href="About.html"> <h> About</h> </a></p>
-<p><a linkID=03 href="Projects.html"> <h> Projects</h> </a></p>
-<p><a linkID=04 href="Blog.html"> <h> Blog</h> </a></p>
-<p><a linkID=05 href="Contact.html"> <h> Contact</h> </a></p>
-</body>
+  <head>
+    <title>My First HTML Page </title>
+    <h1> About</h1>
+    <meta charset="UT-8">
+  </head>
+  <body>
+   <nav>
+    <hr>
+      <a linkID=02 href="index.html">     <h>Home</h></a>     </a><span style='font-size:20px;'>&#8739;
+      <a linkID=02 href="About.html">     <h>About</h></a>    </a><span style='font-size:20px;'>&#8739;
+      <a linkID=03 href="Projects.html">  <h>Projects</h></a> </a><span style='font-size:20px;'>&#8739;
+      <a linkID=04 href="Blog.html">      <h>Blog</h> </a>    </a><span style='font-size:20px;'>&#8739;
+      <a linkID=05 href="Contact.html">   <h>Contact</h> </a>
+    <hr>
+   </nav>
+      <h3>About</h3>
+      <p> About this website is to be written here</p>
+  </body>
 
 </html>
