--- a/index.html
+++ b/index.html
@@ -1,18 +1,23 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>My First HTML Page </title>
-<meta charset="UT-8">
-</head>
-<body>
-<h3> Hi I'm Joel Siroy </h3>
-<p> This would be my first webiste</p>
- <p><a linkID=01 href="index.html"> <h> Home</h> </a></p>
- <p><a linkID=02 href="About.html"> <h> About</h> </a></p>
- <p><a linkID=03 href="Projects.html"> <h> Projects</h> </a></p>
- <p><a linkID=04 href="Blog.html"> <h> Blog</h> </a></p>
- <p><a linkID=05 href="Contact.html"> <h> Contact</h> </a></p>
- 
+  <head>
+            <title>My First HTML Page </title>
+            <h1> My First Website</h1>
+            <meta charset="UT-8">
+ </head>
+ <body>
+  <nav>
+   <hr>
+     <a linkID=02 href="index.html">     <h>Home</h></a>     </a><span style='font-size:20px;'>&#8739;
+     <a linkID=02 href="About.html">     <h>About</h></a>    </a><span style='font-size:20px;'>&#8739;
+     <a linkID=03 href="Projects.html">  <h>Projects</h></a> </a><span style='font-size:20px;'>&#8739;
+     <a linkID=04 href="Blog.html">      <h>Blog</h> </a>    </a><span style='font-size:20px;'>&#8739;
+     <a linkID=05 href="Contact.html">   <h>Contact</h> </a>
+   <hr>
+  </nav>
+  <body>
+      <pre><h3> Hi I'm Joel Siroy </h3></pre>
+      <p> <q>This would be my first webiste </q><br>line break<br> </p>
 </body>
 
 </html>
