--- a/Projects.html
+++ b/Projects.html
@@ -15,9 +15,11 @@
        <a linkID=05 href="Contact.html">   <h>Contact</h> </a>
      <hr>
     </nav>
-       <h3> Projects</h3>
-          <p> My Projects is to be written here</p>
-          <p><a linkID=06 href="TheFirstWorldWideWeb_recreation.html"> <h> Recreated The First World Wide Web</h> </a></p>
+       
+      <h3>Accomplished</h3>
+          <ul>
+              <li><p><a linkID=06 href="TheFirstWorldWideWeb_recreation.html"> <h> Recreated The First World Wide Web</h> </a></p></li>
+        </ul>
   </body>
 
 </html>
