--- a/Projects.html
+++ b/Projects.html
@@ -18,7 +18,10 @@
        
       <h3>Accomplished</h3>
           <ul>
-              <li><p><a linkID=06 href="TheFirstWorldWideWeb_recreation.html"> <h> Recreated The First World Wide Web</h> </a></p></li>
+              <li><p><a linkID=06 href="TheFirstWorldWideWeb_recreation.html"target="_blank">
+                 <h> Recreated The First World Wide Web </h> </a></p></li>
+              <li><p><a linkID=06 href="PersonalBlog_miniproject.html"target="_blank">
+                <h>Personal Blog </h> </a></p></li>
         </ul>
   </body>
 
