--- a/PersonalBlog_miniproject.html
+++ b/PersonalBlog_miniproject.html
@@ -37,23 +37,9 @@
             <dd>-Freelance Electonic Home Service Technician</dd>
         </dl>
         <hr>
-        <h3>This is My Family Photo Gallery</h3>
+        <h3> Photo Gallery</h3>
         <br>
-        <h4>-My Family</h4>
-        <img src="Public/Familypic_01.jpg" alt="Family Photo Captured outside" width=" 300" height="200">
-        <br>
-        <img src="Public/Familypic_after_pandemic.jpg" alt="Family Photo captured Indoor" width=" 300" height="200">
-        <br>
-        <br>
-        <br>
-        <br>
-        <h4>-My Siblings</h4>
-        <img src="Public/Siblings_01.jpg" alt="Family Photo Captured outside" width=" 300" height="200">
-        <br>
-        <br>
-        <br>
-        <h4>-My Two Children</h4>
-        <img src="Public/mychildren.jpg" alt="Family Photo Captured indoor" width=" 200" height="300">
+        <img src="repair.jpg" alt="Family Photo Captured outside" width=" 300" height="200">
         <hr>
         <br>
 
