--- a/PersonalBlog_miniproject.html
+++ b/PersonalBlog_miniproject.html
@@ -33,8 +33,12 @@
         </dl>
         <br>
         <dl>
-            <dt><h3>My Current Work</h></dt>
+            <dt><h3>My Current Work</h3></dt>
             <dd>-Freelance Electonic Home Service Technician</dd>
+        </dl>
+        <dl>
+            <dt><h3>My Goals with KodeGo</h3></dt>
+            <dd>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate atque labore dolore sunt minus non officiis incidunt? Ipsum enim blanditiis odit sint praesentium, dolores quam provident veritatis rem temporibus dolore.</dd>
         </dl>
         <hr>
         <h3> Photo Gallery</h3>
@@ -43,8 +47,7 @@
         <hr>
         <br>
 
-<dl>
-    <dt><h2>Hobbies</h2></dt>
+    <dt><h3>Hobbies</h3></dt>
     <dd>-Watch Movies on Netflix </dd>
     <dd>-Play Billiard </dd>
 
