--- a/index.html
+++ b/index.html
@@ -1,23 +1,31 @@
 <!DOCTYPE html>
 <html>
   <head>
+            <meta charset="UTF-8">
+            <meta http-equiv="X-UA-Compatible" content="IE=edge">
+            <meta name="viewport" content="width=device-width, initial-scale=1.0">
             <title>My First HTML Page </title>
             <h1> My First Website</h1>
             <meta charset="UT-8">
  </head>
  <body>
-  <nav>
+
    <hr>
-     <a linkID=02 href="index.html">     <h>Home</h></a>     </a><span style='font-size:20px;'>&#8739;
-     <a linkID=02 href="About.html">     <h>About</h></a>    </a><span style='font-size:20px;'>&#8739;
-     <a linkID=03 href="Projects.html">  <h>Projects</h></a> </a><span style='font-size:20px;'>&#8739;
-     <a linkID=04 href="Blog.html">      <h>Blog</h> </a>    </a><span style='font-size:20px;'>&#8739;
-     <a linkID=05 href="Contact.html">   <h>Contact</h> </a>
+     <a  href="index.html">     <h>Home</h></a>     </a><span style='font-size:20px;'>&#8739;
+     <a  href="About.html">     <h>About</h></a>    </a><span style='font-size:20px;'>&#8739;
+     <a  href="Projects.html">  <h>Projects</h></a> </a><span style='font-size:20px;'>&#8739;
+     <a  href="Blog.html">      <h>Blog</h> </a>    </a><span style='font-size:20px;'>&#8739;
+     <a  href="Contact.html">   <h>Contact</h> </a>
    <hr>
-  </nav>
+ 
   <body>
       <pre><h3> Hi I'm Joel Siroy </h3></pre>
       <p> <q>This would be my first webiste </q><br>line break<br> </p>
+
+      <pre><h3> My KodeGo Journey </h3></pre>
+      <p> <q>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius repellendus nulla ea, enim corrupti ad animi, <<br> 
+        est pariatur omnis iusto debitis cumque maiores cum voluptates ullam soluta quas quae fugiat aliquam quos tempore explicabo? Quia impedit maiores laboriosam eveniet ab dicta! Natus dolore neque eos eaque totam id nulla quo. </q><br>line break<br> </p>
+      
 </body>
 
 </html>
