--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
  
   <body>
       <pre><h3> Hi I'm Joel Siroy </h3></pre>
-      <p> <q>This would be my first webiste </q><br>line break<br> </p>
+      <p> <q>This would be my first webiste </q> </p>
 
       <pre><h3> My KodeGo Journey </h3></pre>
       <p> <q>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius repellendus nulla ea, enim corrupti ad animi, <<br> 
