--- a/PersonalBlog_miniproject.html
+++ b/PersonalBlog_miniproject.html
@@ -40,16 +40,31 @@
             <dt><h3>My Goals with KodeGo</h3></dt>
             <dd>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate atque labore dolore sunt minus non officiis incidunt? Ipsum enim blanditiis odit sint praesentium, dolores quam provident veritatis rem temporibus dolore.</dd>
         </dl>
-        <hr>
         <h3> Photo Gallery</h3>
         <br>
         <img src="repair.jpg" alt="Family Photo Captured outside" width=" 300" height="200">
-        <hr>
         <br>
 
     <dt><h3>Hobbies</h3></dt>
     <dd>-Watch Movies on Netflix </dd>
     <dd>-Play Billiard </dd>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+<hr>
+<footer>
+<p>year 2023 </p>
+</footer> 
+
 
 </dl> 
 </body>
