--- a/Blog.html
+++ b/Blog.html
@@ -30,7 +30,6 @@
           <dt>Sports</dt>
           <dd>-Basketball</dd>
       </dl>
-          <hr>
           <br>
       <table>
           <tr>  
@@ -49,7 +48,23 @@
              <td>3</td>
           </tr>
       </table>  
-      <hr> 
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+ <hr>
+<footer>
+  
+  <p>year 2023 </p>
+</footer> 
      
  </body>
 
