--- a/index.html
+++ b/index.html
@@ -25,7 +25,24 @@
       <pre><h3> My KodeGo Journey </h3></pre>
       <p> <q>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius repellendus nulla ea, enim corrupti ad animi, <<br> 
         est pariatur omnis iusto debitis cumque maiores cum voluptates ullam soluta quas quae fugiat aliquam quos tempore explicabo? Quia impedit maiores laboriosam eveniet ab dicta! Natus dolore neque eos eaque totam id nulla quo. </q><br>line break<br> </p>
-      
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+   <hr>
+  <footer>
+    
+    <p>year 2023 </p>
+  </footer> 
+
 </body>
 
 </html>
