--- a/PersonalBlog_miniproject.html
+++ b/PersonalBlog_miniproject.html
@@ -42,7 +42,7 @@
         </dl>
         <h3> Photo Gallery</h3>
         <br>
-        <img src="repair.jpg" alt="Family Photo Captured outside" width=" 300" height="200">
+        <img src="repair.jpg" alt="Photo Captured outside" width=" 300" height="200">
         <br>
 
     <dt><h3>Hobbies</h3></dt>
@@ -50,16 +50,7 @@
     <dd>-Play Billiard </dd>
     <br>
     <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
+  
 <hr>
 <footer>
 <p>year 2023 </p>
