--- a/Contact.html
+++ b/Contact.html
@@ -1,27 +1,47 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>My First HTML Page </title>
-    <h1>Contact</h1>
-    <meta charset="UT-8">
-  </head>
+            <meta charset="UTF-8">
+            <meta http-equiv="X-UA-Compatible" content="IE=edge">
+            <meta name="viewport" content="width=device-width, initial-scale=1.0">
+            <title>My First HTML Page </title> 
+            <meta name="description" content="Full Stack Web Developer">
+            <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">      
+ </head>
+ <Header>
+  <style>
+    h1 {color: black;font-family: 'Trebuchet MS'; font-size: 300%;}
+    h2 {color: black;font-family: 'Trebuchet MS'; font-size: 200%;}
+    h3 {color: black;font-family: 'Trebuchet MS'; font-size: 150%;}
+    h  {color: black;font-family: 'Trebuchet MS'; font-size: 100%;}
+    p  {color: black;font-family: 'Trebuchet MS'; font-size: 100%;}
+    </style> 
+  <nav style="background-color:rgb(224, 231, 231);">
+    <br>
+    <table>
+      <tr>
+     <th><a  href="index.html">     <h>Home</h></a>     </a><span style='font-size:20px;'>&#8739; </th>
+     <th><a  href="About.html">     <h>About</h></a>    </a><span style='font-size:20px;'>&#8739; </th>
+     <th><a  href="Projects.html">  <h>Projects</h></a> </a><span style='font-size:20px;'>&#8739; </th>
+     <th><a  href="Blog.html">      <h>Blog</h> </a>    </a><span style='font-size:20px;'>&#8739; </th>
+     <th><a  href="Contact.html">   <h>Contact</h> </a> </th>
+    </tr>
+    </table>
+  </nav>
+</Header>
   <body>
-    <nav>
-     <hr>
-       <a linkID=02 href="index.html">     <h>Home</h></a>     </a><span style='font-size:20px;'>&#8739;
-       <a linkID=02 href="About.html">     <h>About</h></a>    </a><span style='font-size:20px;'>&#8739;
-       <a linkID=03 href="Projects.html">  <h>Projects</h></a> </a><span style='font-size:20px;'>&#8739;
-       <a linkID=04 href="Blog.html">      <h>Blog</h> </a>    </a><span style='font-size:20px;'>&#8739;
-       <a linkID=05 href="Contact.html">   <h>Contact</h> </a>
-     <hr>
-    </nav>
-  <body>
-       <h3> Contact</h3>
-       <p><cite> My Contact is to be written here</cite></p>
-       <h1>Home Address</h1>
+       <h1> Contact</h1>
+       <h2>Mobile Number</h2>
+       <p><bdo dir="rtl">example BDO</bdo></p>
+       <h2>Email Address</h2>
+       <p><bdo dir="rtl">example BDO</bdo></p>
+       <h2>Home Address</h2>
+       <p><bdo dir="rtl">example BDO</bdo></p>
        <p><address><br>Beverly Homes 1 Phase 5,<br> Prenza 2, Marilao Bulacan </address></p>
        <p><bdo dir="rtl">example BDO</bdo></p>
- 
+       <br>
+       <br>
+    
  </body>
 
 </html>
