--- a/PersonalBlog_miniproject.html
+++ b/PersonalBlog_miniproject.html
@@ -4,51 +4,94 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Personal Blog</title>
- 
+    </h1><title>My Personal Blog</title>
+    <meta name="description" content="My Personal Experience Visiting Canigao Island, Matalom Leyte">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
-<body>
-    
-<section>
-<main>
-     <h1> Blog</h1>
-
-</main>
-<body>
+<header>
+    <style>
+        h1 {color: black;font-family: 'Trebuchet MS'; font-size: 300%;}
+        h2 {color: black;font-family: 'Trebuchet MS'; font-size: 200%;}
+        h3 {color: black;font-family: 'Trebuchet MS'; font-size: 150%;}
+        p  {color: black;font-family: 'Trebuchet MS'; font-size: 100%;}
+        </style> 
+  <nav>
+    <table>
+        <th> <a href="#MyBlog"><p> Blog </p></a> </th>   
+        <th> <span style='font-size:20px;'>&#8739;</th>
+        <th> <a href="#Gallery"> <p>Gallery</p> </a> </th>  
+        <th> <span style='font-size:20px;'>&#8739;</th>
+        <th> <a href="#Hobbies"> <p>Hobbies</p> </a> </th>
+    </table>
     <hr>
-    <p> My Name is Joel Siroy and now 39 years old, Born in the province of leyte,<br> 
-        and currently residing in Marilao Bulacan.  </p> 
+    <h1 style="background-color:rgb(19, 212, 238);"> <br> <center>My Personal Travel Experience on Canigao Island Matalom, Leyte</center><br></h1> 
+  </nav>
+    </header>
+ 
 </body>
-</section>
+   <section id="MyBlog"> 
+    <h2>Blog </h2> 
+        <p> My Name is Joel Siroy and now 39 years old, Born in the province of leyte,<br> 
+            and currently residing in Marilao Bulacan Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iure magni autem sed consequuntur fuga, nulla dolorum culpa deserunt ipsum, sapiente doloribus necessitatibus labore aspernatur ipsam earum assumenda totam veniam minus eligendi saepe ea, voluptate numquam corporis possimus! Modi ducimus excepturi nostrum unde perferendis, aperiam labore ad accusamus distinctio nam placeat tempora, esse cumque velit sequi cum accusantium. Nihil ad quod perferendis ut minima ex incidunt, minus atque? Asperiores maxime, temporibus quaerat adipisci sit consequatur et ullam laboriosam? Adipisci, aperiam! Repudiandae quam doloremque modi exercitationem numquam aperiam quaerat ut maxime fugit nostrum ad, natus quae eum labore nihil ipsa ea facilis.
+        </p> 
+   </section>
         <br>
-        <dl>
-            <dt><h3>Academic</h3></dt>
-            <dd>-Graduated at Eastern Visayas State University of Leyte Major In <qt>Electronics</qt> </dd>
-        </dl>
-        <br>
-        <dl>
-            <dt><h3>Past Work Experience</h3></dt>
-            <dd>-7 Years Technician at Mycom Digiserv Inc</dd>
-            <dd>-8 Years Research and Engineering Technical Head at Cybersoft INc. </dd>
-        </dl>
-        <br>
-        <dl>
-            <dt><h3>My Current Work</h3></dt>
-            <dd>-Freelance Electonic Home Service Technician</dd>
-        </dl>
-        <dl>
-            <dt><h3>My Goals with KodeGo</h3></dt>
-            <dd>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate atque labore dolore sunt minus non officiis incidunt? Ipsum enim blanditiis odit sint praesentium, dolores quam provident veritatis rem temporibus dolore.</dd>
-        </dl>
-        <h3> Photo Gallery</h3>
-        <br>
-        <img src="repair.jpg" alt="Photo Captured outside" width=" 300" height="200">
-        <br>
+   <section id="Gallery"> 
+    <h2>Gallery </h2> 
+<table>
+  <tr>
+    <th><img src="canigao1.jpg" alt="picture on beach" style="width:600px;height:400px;"></th>
+    <th><img src="canigao2.jpg" alt="picture on beach" style="width:600px;height:400px;"></th>
+  </tr>
+  <table>
+  <tr>
+    <th><img src="canigao3.jpg" alt="picture on beach" style="width:500px;height:500px;"></tdh
+    <th><img src="canigao5.jpeg" alt="picture on beach" style="width:400px;height:500px;"></th>
+    <th><img src="canigao4.jpeg" alt="picture on beach" style="width:400px;height:500px;"></th>
+  </tr>
+  <tr>
+    <td><img src="canigao6.jpeg" alt="picture on beach" style="width:600px;height:400px;"></td>
+  </tr>
+</table>
+   </section>
 
-    <dt><h3>Hobbies</h3></dt>
-    <dd>-Watch Movies on Netflix </dd>
-    <dd>-Play Billiard </dd>
+   <br>
+    <dl>
+    <section id="Hobbies">
+        <dt><h2>Hobbies </h2></dt>
+        <dd>Travel</p></dd>
+        <dd>Watch Movies</p></dd>
+        <dd>Play Billiard</p></dd>
+    </section>
+    <br>
+    <br>
+    <br>
+    <h3>Travel Guide Reference</h3>
+    <ul>
+       <li>
+         <div>
+              <a href="https://www.philippinebeaches.org/canigao-island-leyte-important-tips/" target="_blank"> 
+                <p>CANIGAO ISLAND, LEYTE: IMPORTANT TRAVEL TIPS</p></a>
+               <p>
+                Canigao Island is a noteworthy addition to your itinerary outside of Kalanggaman Island and Cuatros Islas during your trip to Leyte. The island has white sand and clear azure waters that entice visitors to swim and relax afterward. You won’t regret adding this destination to your list because it not only has a beautiful beachscape but an idyllic atmosphere as well.
+              </p>
+         </div>
+     </li>
+     <li>
+        <div>
+            <a href="https://outoftownblog.com/canigao-island-travel-guide-an-island-paradise-in-leyte/" target="_blank"> 
+              UPDATED Canigao Island Travel Guide: DIY Tour, Itinerary, Budget and more</a>
+            <p>
+                So, where are you going this summer? With more than 7,000 beautiful islands, deciding can be very hard. Why not go somewhere lesser-known but equally magnificent just like the other famous beach destinations in the country? 
+            </p>
+        </div>
+    </li>
 
-</dl> 
+    </ul>
+
+    <hr>
+    <footer>
+        <center><p>Presented By: JSiroy <cite>Copyrigth Year 2023</cite></p> </center>
+    </footer>
 </body>
 </html>
