--- a/Projects.html
+++ b/Projects.html
@@ -1,28 +1,64 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>My First HTML Page </title>
-    <h1> Projects</h1>
-    <meta charset="UT-8">
-  </head>
+            <meta charset="UTF-8">
+            <meta http-equiv="X-UA-Compatible" content="IE=edge">
+            <meta name="viewport" content="width=device-width, initial-scale=1.0">
+            <title>My First HTML Page </title> 
+            <meta name="description" content="Full Stack Web Developer">
+            <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">      
+ </head>
+ <Header>
+  <style>
+    h1 {color: black;font-family: 'Trebuchet MS'; font-size: 300%;}
+    h2 {color: black;font-family: 'Trebuchet MS'; font-size: 200%;}
+    h3 {color: black;font-family: 'Trebuchet MS'; font-size: 150%;}
+    h4 {color: black;font-family: 'Trebuchet MS'; font-size: 130%;}
+    h  {color: black;font-family: 'Trebuchet MS'; font-size: 100%;}
+    p  {color: black;font-family: 'Trebuchet MS'; font-size: 100%;}
+    </style> 
+   <nav style="background-color:rgb(224, 231, 231);">
+    <br>
+    <table>
+      <tr>
+     <th><a  href="index.html">     <h>Home</h></a>     </a><span style='font-size:20px;'>&#8739; </th>
+     <th><a  href="About.html">     <h>About</h></a>    </a><span style='font-size:20px;'>&#8739; </th>
+     <th><a  href="Projects.html">  <h>Projects</h></a> </a><span style='font-size:20px;'>&#8739; </th>
+     <th><a  href="Blog.html">      <h>Blog</h> </a>    </a><span style='font-size:20px;'>&#8739; </th>
+     <th><a  href="Contact.html">   <h>Contact</h> </a> </th>
+    </tr>
+    </table>
+  </nav>
+</Header>
   <body>
-    <nav>
-     <hr>
-       <a linkID=02 href="index.html">     <h>Home</h></a>     </a><span style='font-size:20px;'>&#8739;
-       <a linkID=02 href="About.html">     <h>About</h></a>    </a><span style='font-size:20px;'>&#8739;
-       <a linkID=03 href="Projects.html">  <h>Projects</h></a> </a><span style='font-size:20px;'>&#8739;
-       <a linkID=04 href="Blog.html">      <h>Blog</h> </a>    </a><span style='font-size:20px;'>&#8739;
-       <a linkID=05 href="Contact.html">   <h>Contact</h> </a>
-     <hr>
-    </nav>
-       
-      <h3>Accomplished</h3>
+     <h1>Projects</h1>
+    
+      <h2>Accomplished</h2>
+      <section>
           <ul>
-              <li><p><a linkID=06 href="TheFirstWorldWideWeb_recreation.html"target="_blank">
-                 <h> Recreated The First World Wide Web </h> </a></p></li>
-              <li><p><a linkID=06 href="PersonalBlog_miniproject.html"target="_blank">
-                <h>Personal Blog </h> </a></p></li>
+              <li>
+                 <dl><h3> Re-create Website </h3>
+                    <dt><h4><a linkID=06 href="TheFirstWorldWideWeb_recreation.html"target="_blank">The First World Wide Web</a></h4>
+                    </dt>
+                    <dd>
+                      <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+                      </dd>
+                 </dl>
+              </li>
+
+              <li>
+                <dl><h3>Personal Blog </h3>                   
+                     <dt><h4><a linkID=06 href="PersonalBlog_miniproject.html"target="_blank">Travel Blog </a></h4>
+                     </dt>
+                     <dd>
+                      <p>Lorem ipsum dolor sit amet consectetur, </p>
+                      </dd>
+                </dl>
+              </li>
         </ul>
+      </section>
+        <br>
+        <br>
 
   </body>
 
