--- a/About.html
+++ b/About.html
@@ -1,22 +1,45 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>My First HTML Page </title>
-    <h1> About</h1>
-    <meta charset="UT-8">
-  </head>
-  <body>
-   <nav>
-    <hr>
-      <a linkID=02 href="index.html">     <h>Home</h></a>     </a><span style='font-size:20px;'>&#8739;
-      <a linkID=02 href="About.html">     <h>About</h></a>    </a><span style='font-size:20px;'>&#8739;
-      <a linkID=03 href="Projects.html">  <h>Projects</h></a> </a><span style='font-size:20px;'>&#8739;
-      <a linkID=04 href="Blog.html">      <h>Blog</h> </a>    </a><span style='font-size:20px;'>&#8739;
-      <a linkID=05 href="Contact.html">   <h>Contact</h> </a>
-    <hr>
-   </nav>
-      <h3>About</h3>
-      <p> About this website is to be written here</p>
+            <meta charset="UTF-8">
+            <meta http-equiv="X-UA-Compatible" content="IE=edge">
+            <meta name="viewport" content="width=device-width, initial-scale=1.0">
+            <title>My First HTML Page </title> 
+            <meta name="description" content="Full Stack Web Developer">
+            <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">      
+ </head>
+ <Header>
+  <style>
+    h1 {color: black;font-family: 'Trebuchet MS'; font-size: 300%;}
+    h2 {color: black;font-family: 'Trebuchet MS'; font-size: 200%;}
+    h3 {color: black;font-family: 'Trebuchet MS'; font-size: 150%;}
+    h  {color: black;font-family: 'Trebuchet MS'; font-size: 100%;}
+    p  {color: black;font-family: 'Trebuchet MS'; font-size: 100%;}
+    </style> 
+   <nav style="background-color:rgb(224, 231, 231);">
+    <br>
+    <table>
+      <tr>
+     <th><a  href="index.html">     <h>Home</h></a>     </a><span style='font-size:20px;'>&#8739; </th>
+     <th><a  href="About.html">     <h>About</h></a>    </a><span style='font-size:20px;'>&#8739; </th>
+     <th><a  href="Projects.html">  <h>Projects</h></a> </a><span style='font-size:20px;'>&#8739; </th>
+     <th><a  href="Blog.html">      <h>Blog</h> </a>    </a><span style='font-size:20px;'>&#8739; </th>
+     <th><a  href="Contact.html">   <h>Contact</h> </a> </th>
+    </tr>
+    </table>
+  </nav>
+</Header>
+  <body>     
+     
+      <h2> Hi I'm Joel Siroy </h2>
+      <h3> This is My First Website</h3>
+      <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nihil dignissimos modi quis, ullam asperiores alias cumque harum, eaque voluptatibus necessitatibus temporibus eligendi ducimus voluptatum sequi quos porro officia illo. Adipisci et dicta accusantium incidunt corrupti eos fuga consectetur tenetur repellendus! Animi tenetur rerum harum aliquam maiores, eveniet qui repellat fugiat recusandae, facilis illo incidunt. Quam distinctio consequuntur saepe at voluptatem non amet nemo, nostrum animi blanditiis iure iste. Nobis rerum aliquid cum magni. Ab, sequi. Quo, exercitationem amet! Eum voluptatum laborum natus error enim facere maiores, quia eaque harum! Sint officiis enim amet. Voluptates dolorem in numquam aspernatur labore accusantium!Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias enim beatae quae quia blanditiis dignissimos ducimus sint nobis adipisci, facere quos laborum, deserunt tenetur delectus hic recusandae nam! Eveniet, tenetur.Lorem ipsum, dolor sit amet consectetur adipisicing elit. Asperiores, natus ut voluptatum tempora incidunt quas soluta officiis sequi recusandae laudantium?
+
+      </p>
+      <br>
+      <br>
+  
+      
 
 
   </body>
