--- a/Blog.html
+++ b/Blog.html
@@ -1,55 +1,48 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>My First HTML Page </title>
-        <h1> Blog</h1>
-        <meta charset="UT-8">
-</head>
+  <head>
+            <meta charset="UTF-8">
+            <meta http-equiv="X-UA-Compatible" content="IE=edge">
+            <meta name="viewport" content="width=device-width, initial-scale=1.0">
+            <title>My First HTML Page </title> 
+            <meta name="description" content="Full Stack Web Developer">
+            <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">      
+ </head>
+ <Header>
+  <style>
+    h1 {color: black;font-family: 'Trebuchet MS'; font-size: 300%;}
+    h2 {color: black;font-family: 'Trebuchet MS'; font-size: 200%;}
+    h3 {color: black;font-family: 'Trebuchet MS'; font-size: 150%;}
+    h  {color: black;font-family: 'Trebuchet MS'; font-size: 100%;}
+    p  {color: black;font-family: 'Trebuchet MS'; font-size: 100%;}
+    </style> 
+  <nav style="background-color:rgb(224, 231, 231);">
+    <br>
+    <table>
+      <tr>
+     <th><a  href="index.html">     <h>Home</h></a>     </a><span style='font-size:20px;'>&#8739; </th>
+     <th><a  href="About.html">     <h>About</h></a>    </a><span style='font-size:20px;'>&#8739; </th>
+     <th><a  href="Projects.html">  <h>Projects</h></a> </a><span style='font-size:20px;'>&#8739; </th>
+     <th><a  href="Blog.html">      <h>Blog</h> </a>    </a><span style='font-size:20px;'>&#8739; </th>
+     <th><a  href="Contact.html">   <h>Contact</h> </a> </th>
+    </tr>
+    </table>
+  </nav>
+</Header>
 <body>
-    <nav>
-     <hr>
-       <a linkID=02 href="index.html">     <h>Home</h></a>     </a><span style='font-size:20px;'>&#8739;
-       <a linkID=02 href="About.html">     <h>About</h></a>    </a><span style='font-size:20px;'>&#8739;
-       <a linkID=03 href="Projects.html">  <h>Projects</h></a> </a><span style='font-size:20px;'>&#8739;
-       <a linkID=04 href="Blog.html">      <h>Blog</h> </a>    </a><span style='font-size:20px;'>&#8739;
-       <a linkID=05 href="Contact.html">   <h>Contact</h> </a>
-     <hr>
-    </nav>
-      <h3> Blog</h3>
-      <p>My Blogs is to be written here</p>
-      <h>Hobbies</h>
+      <h1> Blog</h1>
+      <pre><h2> My KodeGo Journey </h2></pre>
+      <p> <q>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius repellendus nulla ea, enim corrupti ad animi, <<br> 
+        est pariatur omnis iusto debitis cumque maiores cum voluptates ullam soluta quas quae fugiat aliquam quos tempore explicabo? Quia impedit maiores laboriosam eveniet ab dicta! Natus dolore neque eos eaque totam id nulla quo. </q><br>line break<br> </p>
+
+      <h3>Hobbies</h3>
       <ul>
           <li>Billiard</li>
-          <li>Watching Movies</li>
+          <li>Watch Movies</li>
+          <li>Travel</li>
       </ul>
-      <ol>
-         <li>Billiard</li>
-         <li>Watching Movies</li>
-      </ol>
-      <dl>
-          <dt>Sports</dt>
-          <dd>-Basketball</dd>
-      </dl>
-          <br>
-      <table>
-          <tr>  
-              <th>Day 1</th>
-              <th>Day 2</th>
-              <th>Day 3</th>
-          </tr>
-          <tr>
-              <td>A</td>
-              <td>B</td>
-              <td>C</td>
-          </tr>
-          <tr>
-             <td>1</td>
-             <td>2</td>
-             <td>3</td>
-          </tr>
-      </table>  
-
-
+  
+   
      
  </body>
 
