--- a/About.html
+++ b/About.html
@@ -20,6 +20,7 @@
     <br>
     <table>
       <tr>
+     <th><img src="favicon.png" alt="picture on beach" style="width:30px;height:30px;"></th>
      <th><a  href="index.html">     <h>Home</h></a>     </a><span style='font-size:20px;'>&#8739; </th>
      <th><a  href="About.html">     <h>About</h></a>    </a><span style='font-size:20px;'>&#8739; </th>
      <th><a  href="Projects.html">  <h>Projects</h></a> </a><span style='font-size:20px;'>&#8739; </th>
