--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
             <title>My First HTML Page </title> 
             <meta name="description" content="Full Stack Web Developer">
-            <link rel="shortcut icon" href="favicon.png" type="image/x-icon">      
+            <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">      
  </head>
  <Header>
   <style>
