--- a/PersonalBlog_miniproject.html
+++ b/PersonalBlog_miniproject.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </h1><title>My Personal Blog</title>
     <meta name="description" content="My Personal Experience Visiting Canigao Island, Matalom Leyte">
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
 </head>
 <header>
     <style>
@@ -17,6 +17,7 @@
         </style> 
   <nav>
     <table>
+        <th><img src="favicon.png" alt="JSI logo" style="width:30px;height:30px;"></th>
         <th> <a href="#MyBlog"><p> Blog </p></a> </th>   
         <th> <span style='font-size:20px;'>&#8739;</th>
         <th> <a href="#Gallery"> <p>Gallery</p> </a> </th>  
