--- a/PersonalBlog_miniproject.html
+++ b/PersonalBlog_miniproject.html
@@ -25,7 +25,7 @@
         <th> <a href="#Hobbies"> <p>Hobbies</p> </a> </th>
     </table>
     <hr>
-    <h1 style="background-color:rgb(19, 212, 238);"> <br> <center>My Personal Travel Experience on Canigao Island Matalom, Leyte</center><br></h1> 
+    <h1 style="background-color:rgb(19, 212, 238);"> <br> <center>My Personal Experience on Canigao Island Matalom, Leyte</center><br></h1> 
   </nav>
     </header>
  
