--- a/Projects.html
+++ b/Projects.html
@@ -6,18 +6,11 @@
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
             <title>My First HTML Page </title> 
             <meta name="description" content="Full Stack Web Developer">
-            <link rel="shortcut icon" href="favicon.png" type="image/x-icon">      
+            <link rel="shortcut icon" href="favicon.png" type="image/x-icon"> 
+            <link rel="stylesheet" href="style.css">       
  </head>
  <Header>
-  <style>
-    h1 {color: black;font-family: 'Trebuchet MS'; font-size: 300%;}
-    h2 {color: black;font-family: 'Trebuchet MS'; font-size: 200%;}
-    h3 {color: black;font-family: 'Trebuchet MS'; font-size: 150%;}
-    h4 {color: black;font-family: 'Trebuchet MS'; font-size: 130%;}
-    h  {color: black;font-family: 'Trebuchet MS'; font-size: 100%;}
-    p  {color: black;font-family: 'Trebuchet MS'; font-size: 100%;}
-    </style> 
-   <nav style="background-color:rgb(224, 231, 231);">
+   <nav>
     <br>
     <table>
       <tr>
@@ -43,7 +36,13 @@
                     </dt>
                     <dd>
                       <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
-                      </dd>
+                    </dd>
+                 </dl>
+                 <dl>
+                  <dt><h4><a linkID=06 href="semantic.html"target="_blank">Replicating Basic Layout with Semantic Elements</a></h4>
+                    <dd>
+                      <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+                    </dd>
                  </dl>
               </li>
 
