--- a/PersonalBlog_miniproject.html
+++ b/PersonalBlog_miniproject.html
@@ -13,6 +13,7 @@
         h1 {color: black;font-family: 'Trebuchet MS'; font-size: 300%;}
         h2 {color: black;font-family: 'Trebuchet MS'; font-size: 200%;}
         h3 {color: black;font-family: 'Trebuchet MS'; font-size: 150%;}
+        h4 {color: black;font-family: 'Trebuchet MS'; font-size: 130%;}
         p  {color: black;font-family: 'Trebuchet MS'; font-size: 100%;}
         </style> 
   <nav>
@@ -32,9 +33,22 @@
 </body>
    <section id="MyBlog"> 
     <h2>Blog </h2> 
-        <p> My Name is Joel Siroy and now 39 years old, Born in the province of leyte,<br> 
-            and currently residing in Marilao Bulacan Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iure magni autem sed consequuntur fuga, nulla dolorum culpa deserunt ipsum, sapiente doloribus necessitatibus labore aspernatur ipsam earum assumenda totam veniam minus eligendi saepe ea, voluptate numquam corporis possimus! Modi ducimus excepturi nostrum unde perferendis, aperiam labore ad accusamus distinctio nam placeat tempora, esse cumque velit sequi cum accusantium. Nihil ad quod perferendis ut minima ex incidunt, minus atque? Asperiores maxime, temporibus quaerat adipisci sit consequatur et ullam laboriosam? Adipisci, aperiam! Repudiandae quam doloremque modi exercitationem numquam aperiam quaerat ut maxime fugit nostrum ad, natus quae eum labore nihil ipsa ea facilis.
-        </p> 
+        <p> 
+          Hi I'm Joel and just want share with you my personal experinece when I visited Canigao Island.
+        </p>
+        <h3>What is Canigao Island?</h3>
+          <p>Canigao Island is a one of tourist destination site located in Matalom Leyte. From Matalom Leyte you need ride a boat which will take 15 to 30 minutes depends on the weather.
+          What makes Canigao Island so unique is unhabitant and protected island,has a light house that's well known man-made structure that make it signifcant, The area is known to have a good scenery, great white sand, crystal clear waters, abundant fishing grounds and scenic coral reefs area suitable for diving. 
+         </p>
+          <h4>My first Impression on Canigao Island </h4>
+          <p>Various of fresh rare sea foods, amazing under water scenery of fish and coral reef, 
+            white sand and tall trees.
+            <br> If you are planning for a vacation to Boracay but low on budget I suggest that you try Canigao Island.
+          </p>
+          <h4>What to expect to see in the Island?</h4>
+          <p>
+           You will enjoy the view of White sand beach and crystal clear see water, In the island you will see food stalls that sells fresh sea foods and other basic necessity, you can also see there a lot of trees big or small,I suggest if you plan visting Canigao you'll need to bring undewater camera or other under water equipment to spot the amazing view under water,corals formation and many other kind of fish that will interest you. Accomodation is optional you can rent a room, a house for a bog family, you can rent or bring your own tent that since it has lot of tall trees it's perfect for camping.
+          </p> 
    </section>
         <br>
    <section id="Gallery"> 
