--- a/Projects.html
+++ b/Projects.html
@@ -48,7 +48,7 @@
 
               <li>
                 <dl><h3>Personal Blog </h3>                   
-                     <dt><h4><a linkID=06 href="PersonalBlog_miniproject.html"target="_blank">Travel Blog </a></h4>
+                     <dt><h4><a linkID=06 href="PersonalBlog_assignment.html"target="_blank">Travel Blog </a></h4>
                      </dt>
                      <dd>
                       <p>Lorem ipsum dolor sit amet consectetur, </p>
