--- a/Projects.html
+++ b/Projects.html
@@ -10,21 +10,26 @@
             <link rel="stylesheet" href="style.css">       
  </head>
  <Header>
-   <nav>
-    <br>
-    <table>
-      <tr>
-     <th><img src="favicon.png" alt="JSI logo" style="width:30px;height:30px;"></th>
-     <th><a  href="index.html">     <h>Home</h></a>     </a><span style='font-size:20px;'>&#8739; </th>
-     <th><a  href="About.html">     <h>About</h></a>    </a><span style='font-size:20px;'>&#8739; </th>
-     <th><a  href="Projects.html">  <h>Projects</h></a> </a><span style='font-size:20px;'>&#8739; </th>
-     <th><a  href="Blog.html">      <h>Blog</h> </a>    </a><span style='font-size:20px;'>&#8739; </th>
-     <th><a  href="Contact.html">   <h>Contact</h> </a> </th>
-    </tr>
-    </table>
+  <nav>
+
+    <div class="navcontainer">
+          <div class="navitem" >
+       <img src="favicon.png" alt="JSI logo" style="width:60px;height:60px;">
+       </div>
+    <div>
+      <div class="navitem">
+      <ul>
+              <li><a  href="index.html">     <h>Home</h></a>     </a><span style='font-size:20px;'>&#8739; </li>
+              <li><a  href="About.html">     <h>About</h></a>    </a><span style='font-size:20px;'>&#8739; </li>
+              <li><a  href="Projects.html">  <h>Projects</h></a> </a><span style='font-size:20px;'>&#8739; </li>
+              <li><a  href="Blog.html">      <h>Blog</h> </a>    </a><span style='font-size:20px;'>&#8739; </li>
+              <li><a  href="Contact.html">   <h>Contact</h> </a> </li>
+      </ul>
+  </div>
   </nav>
-</Header>
+ </Header>
   <body>
+  <hr>
      <h1>Projects</h1>
     
       <h2>Accomplished</h2>
