--- a/Blog.html
+++ b/Blog.html
@@ -6,31 +6,30 @@
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
             <title>My First HTML Page </title> 
             <meta name="description" content="Full Stack Web Developer">
-            <link rel="shortcut icon" href="favicon.png" type="image/x-icon">      
+            <link rel="shortcut icon" href="favicon.png" type="image/x-icon"> 
+            <link rel="stylesheet" href="style.css">        
  </head>
  <Header>
-  <style>
-    h1 {color: black;font-family: 'Trebuchet MS'; font-size: 300%;}
-    h2 {color: black;font-family: 'Trebuchet MS'; font-size: 200%;}
-    h3 {color: black;font-family: 'Trebuchet MS'; font-size: 150%;}
-    h  {color: black;font-family: 'Trebuchet MS'; font-size: 100%;}
-    p  {color: black;font-family: 'Trebuchet MS'; font-size: 100%;}
-    </style> 
-  <nav style="background-color:rgb(224, 231, 231);">
-    <br>
-    <table>
-      <tr>
-     <th><img src="favicon.png" alt="JSI logo" style="width:30px;height:30px;"></th>
-     <th><a  href="index.html">     <h>Home</h></a>     </a><span style='font-size:20px;'>&#8739; </th>
-     <th><a  href="About.html">     <h>About</h></a>    </a><span style='font-size:20px;'>&#8739; </th>
-     <th><a  href="Projects.html">  <h>Projects</h></a> </a><span style='font-size:20px;'>&#8739; </th>
-     <th><a  href="Blog.html">      <h>Blog</h> </a>    </a><span style='font-size:20px;'>&#8739; </th>
-     <th><a  href="Contact.html">   <h>Contact</h> </a> </th>
-    </tr>
-    </table>
+  <nav>
+
+    <div class="navcontainer">
+          <div class="navitem" >
+       <img src="favicon.png" alt="JSI logo" style="width:60px;height:60px;">
+       </div>
+    <div>
+      <div class="navitem">
+      <ul>
+              <li><a  href="index.html">     <h>Home</h></a>     </a><span style='font-size:20px;'>&#8739; </li>
+              <li><a  href="About.html">     <h>About</h></a>    </a><span style='font-size:20px;'>&#8739; </li>
+              <li><a  href="Projects.html">  <h>Projects</h></a> </a><span style='font-size:20px;'>&#8739; </li>
+              <li><a  href="Blog.html">      <h>Blog</h> </a>    </a><span style='font-size:20px;'>&#8739; </li>
+              <li><a  href="Contact.html">   <h>Contact</h> </a> </li>
+      </ul>
+  </div>
   </nav>
-</Header>
-<body>
+ </Header>
+  <body>
+  <hr>
       <h1> Blog</h1>
       <pre><h2> My KodeGo Journey </h2></pre>
       <p> <q>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius repellendus nulla ea, enim corrupti ad animi, <<br> 
