--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
             <title>Portfolio</title> 
             <meta name="description" content="Full Stack Web Developer">
             <link rel="shortcut icon" href="favicon.png" type="image/x-icon">   
-            <link rel="stylesheet" href="stylesheet.css">   
+            <link rel="stylesheet" href="style.css">   
  </head>
  <Header>
   <nav>
