--- a/Blog.html
+++ b/Blog.html
@@ -42,7 +42,19 @@
           <li>Travel</li>
       </ul>
   
-   
+      <footer>
+        <div class="socialcontainer">
+              <div class="socialitem">
+                <img src="gmail.png" alt="icon"style="width: 30px;height: 30px;">
+              </div>
+              <div class="socialitem">
+                <img src="facebook.png" alt="icon"style="width: 30px;height: 30px;">
+              </div>
+              <div class="socialitem">
+                <img src="mobile.png" alt="icon"style="width: 30px;height: 30px;">
+             </div>
+        </div>
+  </footer>
      
  </body>
 
