--- a/Projects.html
+++ b/Projects.html
@@ -48,7 +48,7 @@
                     <ul>
                        <li>
                        <dl><h3>Frontend Mentor Challenges</h3>
-                         <dd><p><a linkID=06 href="Projects.html"target="_blank">-product-preview-card-component-main </a></p>
+                         <dd><p><a linkID=06 href="https://jsiroy.github.io/frontend-mentor-challenge1/"target="_blank">-product-preview-card-component-main </a></p>
                          </dd>
                          <dd><p><a linkID=06 href="skill-cards.html"target="_blank">-Skill Cards </a></p>
                          </dd>
