--- a/pages/about.html
+++ b/pages/about.html
@@ -303,13 +303,13 @@
                                       </div>
                                       <div class="carousel-inner">
                                            <div class="carousel-item active ">
-                                             <img src="../resources/certificate1.png" class="d-block w-100" alt="..." >
+                                             <img src="../resources/certificate.png" class="d-block w-100" alt="..." >
                                            </div>
                                             <div class="carousel-item">
                                               <img src="../resources/certificate2.png" class="d-block w-100" alt="...">
                                             </div>
                                             <div class="carousel-item">
-                                              <img src="../resources/certificate1.png" class="d-block w-100" alt="...">
+                                              <img src="../resources/certificate.png" class="d-block w-100" alt="...">
                                             </div>
                                       </div>
                                       <button class="carousel-control-prev" type="button"     data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
