--- a/pages/mini-project-1/miniproject1.html
+++ b/pages/mini-project-1/miniproject1.html
@@ -7,7 +7,7 @@
     <title>BossJo Electronics</title>
     <meta name="description" content="Electronic Equipment Repair Services">
     <link rel="shortcut icon" href="favicon.png" type="image/x-icon">   
-    <link rel="stylesheet" href="style.css">  
+    <link rel="stylesheet" href="miniproject1style.css">  
 </head>
 
 </head>
@@ -48,7 +48,7 @@
             <h2>Servicing Supported Brands and Types</h2>
             <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Excepturi, eaque.</p>
             
-            <center><table>
+            <table>
                 <tr>
                  <th>
                 <img src="picture.jpg" alt="picture blankl" width="300px"
@@ -85,7 +85,7 @@
                     height="300px">
                 </td>
                </tr>
-            </table></center>
+            </table>
        </section>
           <section>
             <h2>About Us</h2>
