--- a/pages/projects.html
+++ b/pages/projects.html
@@ -47,6 +47,7 @@
 <!----------Projects section starts here---->
 <section class="projects"> 
   <h3 class="px-4 pt-5">Projects</h3> 
+     <a href="../pages/mini-project-1/index.html"target="_blank" rel="mini-project-1">Mini Project 1 tempory link</a>
      <hr> 
      <div class="accordion accordion-flush" id="accordionFlushExample">
         <div class="accordion-item background">
