--- a/pages/projects.html
+++ b/pages/projects.html
@@ -6,7 +6,7 @@
     <title>Porfolio</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="shortcut icon" href="../resources/favicon.png" type="image/x-icon"> 
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/mainpagestyle.css">
   </head>
 
   <body class="background">
@@ -47,7 +47,7 @@
 <!----------Projects section starts here---->
 <section class="projects"> 
   <h3 class="px-4 pt-5">Projects</h3> 
-     <a href="../pages/mini-project-1/index.html"target="_blank" rel="mini-project-1">Mini Project 1 tempory link</a>
+    
      <hr> 
      <div class="accordion accordion-flush" id="accordionFlushExample">
         <div class="accordion-item background">
@@ -346,7 +346,11 @@
     </div> 
   </div>                   
 </section>
-    <footer>           
+    <footer>    
+      <span class="px-5 pt-5"><a href="../pages/mini-project-1/index.html"target="_blank" rel="mini-project-1">
+                              Mini Project 1 tempory link
+                               </a> 
+      </span>      
             <div class="d-flex justify-content-end">
                     <div class="p-2 ">
                             <a class="btn btn-outline-primary m-4" href="https://www.google.com/" target="_blank" role="button" >
@@ -361,7 +365,7 @@
                     </div>                     
            </div>
      </footer>
-
+                    
                     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
   </body>
 </html>
