--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                                  </h1>
                              </div>
                              <div class="col profileimage">
-                            <img src="../portfolio/resources/profile.png" alt="Profile Pic" height="400px">
+                            <img src="./resources/profile.png" alt="Profile Pic" height="400px">
                             </div>  
                   </div>
                   <div class="nameheader" >
