--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
     <header>
        
         <!----------------Navigation Bar Area-------------------->
-        
             <nav class="navbar navbar-expand-lg bg-dark-subtle sticky-top">
               <div class="container-fluid">
                   <img src="./resources/favicon.png" alt="JSI logo" height="50px">
@@ -630,7 +629,7 @@
         <footer class="bg-dark-subtle">           
             <div class="d-flex justify-content-end">
                     <div class="p-2 ">
-                            <a class="btn btn-outline-primary m-4" href="https://www.google.com/" target="_blank" role="button" >
+                            <a class="btn btn-outline-primary m-4" href="https://www.facebook.com/profile.php?id=100089248346059" target="_blank" role="button" >
                                <img src="./resources/facebook.png" alt="facebook logo" style="width:20px;height:20px;">
                             </a>                                   
                             <a class="btn btn-outline-primary m-4"href="https://www.google.com/" target="_blank" role="button" >
