--- a/pages/mini-project-1/index.html
+++ b/pages/mini-project-1/index.html
@@ -219,7 +219,7 @@
                   </div>
                   
                   <div class="p-2">                  
-                       <a class="btn btn-outline-primary m-4" href="https://www.facebook.com/messages/t/105365179128556/" target="_blank" role="button" >
+                       <a class="btn btn-outline-primary m-4" href="https://l.facebook.com/l.php?u=http%3A%2F%2Fm.me%2F105365179128556%3Ffbclid%3DIwAR3DRwiOj_xDmHyhEI_dAWQ1iH8XKuYciHQy_4Ha3Q1HLLj5RvWAeS0q6eg&h=AT2nvHQ6WV4BudeCX7hJH6hVrpIdLPfqhxlk6guQQsZdiM9EhO-BmeRcGjkwfU5s-dVHbu_WmNbvhiEpSmZivNuZU9j6kKq4uUrSYrELhw8inW-JfskPERYEldrWz3690wjN-g" target="_blank" role="button" >
                         <img src="./resources/chat.png" alt="messenger logo" style="width:40px;height:100%;"> 
                        </a>
                  </div>
