--- a/pages/mini-project-1/index.html
+++ b/pages/mini-project-1/index.html
@@ -10,6 +10,7 @@
     integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="shortcut icon" href="./" type="image/x-icon">   
     <link rel="stylesheet" href="./css/miniproject1style.css">  
+    <script src="https://kit.fontawesome.com/59d377ced1.js" crossorigin="anonymous"></script>
 </head>
 
    <body>
@@ -203,24 +204,25 @@
             <div class="d-flex flex-row mb-3">
                  <div class="p-2">   
                       <a class="btn btn-outline-primary m-4" href="https://www.facebook.com/profile.php?id=100089248346059" target="_blank" role="button" >
-                         <img src="./resources/facebook.png" alt="facebook logo" style="width:40px;height:auto;">
+                        <i class="fa-brands fa-facebook fa-fade fa-2xl" style="color: #0a5adb;">
+                         </i>
                       </a>  
                  </div>   
                  <div class="p-2"> 
                         <a class="btn btn-outline-primary m-4"href="mailto:bossjoelectronics@gmail.com" target="_blank" role="button" >
-                           <img src="./resources/gmail.png" alt="gmail logo"style="width:40px;height:100%;">     
+                          <i class="fa-brands fa-google fa-beat fa-2xl" style="color: #ebecf0;"></i>    
                        </a> 
                   </div>
                
                   <div class="p-2">   
                         <a class="btn btn-outline-primary m-4" href="tel:+639569477780" target="_blank" role="button" >
-                           <img src="./resources/mobile.png" alt="mobile logo" style="width:40px;height:100%;"> 
+                          <i class="fa-solid fa-phone fa-beat fa-2xl"></i>
                            </a>
                   </div>
                   
                   <div class="p-2">                  
                        <a class="btn btn-outline-primary m-4" href="https://l.facebook.com/l.php?u=http%3A%2F%2Fm.me%2F105365179128556%3Ffbclid%3DIwAR3DRwiOj_xDmHyhEI_dAWQ1iH8XKuYciHQy_4Ha3Q1HLLj5RvWAeS0q6eg&h=AT2nvHQ6WV4BudeCX7hJH6hVrpIdLPfqhxlk6guQQsZdiM9EhO-BmeRcGjkwfU5s-dVHbu_WmNbvhiEpSmZivNuZU9j6kKq4uUrSYrELhw8inW-JfskPERYEldrWz3690wjN-g" target="_blank" role="button" >
-                        <img src="./resources/chat.png" alt="messenger logo" style="width:40px;height:100%;"> 
+                        <i class="fa-brands fa-facebook-messenger fa-beat-fade fa-2xl"></i>
                        </a>
                  </div>
             </div>        
